--- a/client/src/components/TabRace/style.css
+++ b/client/src/components/TabRace/style.css
@@ -1,13 +1,17 @@
 .character-progress-bar__container {
   background-color: transparent;
 }
-#Racebox {
+/* #Racebox {
   color: white;
   text-shadow: 2px 1px 2px #2e2d2d;
-  
-  /* Background card stuff */
-  border-radius: 5px;
+   */
+/* Background card stuff */
+/* border-radius: 5px;
   background-color: #3f3a34;
   border: 1px solid #1f1c1a;
   opacity: 0.8;
+} */
+
+.tab-race_description {
+  font-size: 16px;
 }
